--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Visual Studio C++ files to ignore
+*.vcxproj.user
+*.vcxproj.filters
+
 # User-specific files
 *.rsuser
 *.suo
