SelectionSort algorithm implemented

--- a/SortingAlgorithms/SortingAlgorithms.vcxproj
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BubbleSort.cpp" />
+    <ClCompile Include="SelectionSort.cpp" />
     <ClCompile Include="SortingAlgorithms.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
