--- a/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="BubbleSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SelectionSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
