Insertion sort implemented

--- a/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="SelectionSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InsertionSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
