MergeSort algorithm implemented

--- a/SortingAlgorithms/SortingAlgorithms.vcxproj
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="BubbleSort.cpp" />
     <ClCompile Include="InsertionSort.cpp" />
+    <ClCompile Include="MergeSort.cpp" />
     <ClCompile Include="SelectionSort.cpp" />
     <ClCompile Include="SortingAlgorithms.cpp" />
   </ItemGroup>
