--- a/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="InsertionSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MergeSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
