QuickSort algorithm implemented

--- a/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
+++ b/SortingAlgorithms/SortingAlgorithms.vcxproj.filters
@@ -30,5 +30,13 @@
     <ClCompile Include="MergeSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QuickSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QuickSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
